# maya-migrate-to-databricks

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASE_RUNBOOK.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adapters/: __init__.py  base.py
adapters/bi/: __init__.py  _offline.py  looker.py  powerbi.py  tableau.py
adapters/postgres/: adapter.py
adapters/synapse/: README.md  __init__.py  adapter.py
blog/: 01_meet_maya_northwind.md  02_adapter_model.md  03_dependency_graph.md  04_build_order_waves.md  05_pipeline_contract.md  06_reusable_engines.md  07_maya_dev_illusion.md  08_maya_sit_drift_loop.md  09_maya_soak_sustained.md  10_dashboard_bi_cutover.md  README.md  export_pack.py  publish_to_linkedin.py
blog/figures/: add_author.py  embed_figures.py  generate_figures.py  series_format.py
book/: README.md  author.json  build_book.py  build_story.py  build_value_brief.py  content.py  story_content.py  value_content.py
book/assets/: leaderboard.json
book/figures/: figlib.py  make_figures.py  make_translogos.py
core/: __init__.py  bi.py  branding.py  config.py  conformance.py  contract.py  docs.py  enablement.py  engines.py  graph.py  identity.py  maya.py  orchestration.py  order.py  pipeline_spec.py  publish.py  readiness.py  replicate.py  reports.py  score.py  stages.py  validation.py  verify_order.py
core/agents/: __init__.py  base.py  cursor.py  offline.py
core/apps/: __init__.py  appgen.py  deploy.py  etl.py  model.py  parity.py
docs/: 00_readiness.md  01_methodology.md  02_phase0_prereqs.md  03_graph_and_lineage.md  04_build_order.md  05_pipeline_contract.md  06_engines.md  07_validation_framework.md  08_maya_two_phase_validation.md  09_agent_orchestration.md  10_execution_plan.md  11_dashboard.md  12_adapter_authoring_guide.md  13_bi_layer_migration.md  14_identity_security_governance.md  15_enablement_training.md  16_cutover_rollback_operations.md  17_knowledge_base_assets.md
docs/tutorial/: 01_meet_maya_and_northwind.md  02_the_adapter_model.md  03_the_dependency_graph.md  04_build_order_and_verifier.md  05_the_pipeline_contract.md  06_reusable_engines.md  07_maya_dev_illusion.md  08_maya_sit_and_drift_loop.md  09_maya_soak_sustained_parity.md  10_dashboard_bi_and_cutover.md  README.md
examples/northwind/: connections.csv  edges.csv  northwind.yaml  objects.csv
examples/northwind-app/: northwind-app.yaml
examples/northwind/bi_export/: bi_queries.json
examples/northwind/postgres/: schema.sql
examples/retail/: pipelines.json
templates/: agent_prompt.md  bi_agent_prompt.md  bi_config.example.yaml  context_pack_schema.json  dashboard_control_tables.sql  engine_config.example.yaml  maya_sample.example.yaml  project_config.example.yaml  spec_schema.json
tests/: conftest.py  test_agents.py  test_apps.py  test_contract.py  test_graph.py  test_maya.py  test_order.py  test_stages.py  test_validation.py
(+56 files in other folders)
